--- a/layouts/index.html
+++ b/layouts/index.html
@@ -41,7 +41,7 @@
 <div class="container pt-8 pb-8 pb-md-14 pt-md-14">
   <div class="row justify-content-start">
     <div class="col-12">
-      <h2 class="text-center mb-3">Why Open Hardwares?</h2>
+      <h2 class="text-center mb-3">Our Philosophy</h2>
     </div>
     {{ range first 6 (sort $services ".Params.weight") }}
     <div class="col-12 col-md-4 mb-1">
@@ -49,7 +49,7 @@
     </div>
     {{ end }}
     <div class="col-12 text-center">
-      <a class="button button-primary" href="{{ .Site.BaseURL }}services">View All Blogs</a>
+      <a class="button button-primary" href="{{ .Site.BaseURL }}services">View All</a>
     </div>
   </div>
 </div>
