--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,10 @@
 <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="{{ .Site.BaseURL }}"><img alt="Zeroidea Homepage" src="https://open-source-life.jp/images/logo-zeroidea-regular-separate.svg" /></a>
+      <a href="{{ .Site.BaseURL }}"><img alt="Zeroidea Homepage" src="{{ .Site.BaseURL }}/images/logo-zeroidea-regular-separate.svg" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="{{ .Site.BaseURL }}"><img alt="Zeroidea Homepage" src="https://open-source-life.jp/logo-mobile-zi-regular-zi.svg" /></a>
+      <a href="{{ .Site.BaseURL }}"><img alt="Zeroidea Homepage" src="{{ .Site.BaseURL }}/images/logo-mobile-zi-regular-zi.svg" /></a>
     </div>
     {{ partial "main-menu.html" . }}
     {{ partial "hamburger.html" . }}
