--- a/layouts/index.html
+++ b/layouts/index.html
@@ -49,7 +49,7 @@
     </div>
     {{ end }}
     <div class="col-12 text-center">
-      <a class="button button-primary" href="{{ .Site.BaseURL }}services">View All</a>
+      <a class="button button-primary" href="{{ .Site.BaseURL }}/services">View All</a>
     </div>
   </div>
 </div>
